--- a/wikifood/.project
+++ b/wikifood/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>wikifood</name>
+	<name>wikifood-manager</name>
 	<comment></comment>
 	<projects>
 	</projects>
