--- a/wikifood-data/src/main/resources/application.properties
+++ b/wikifood-data/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/wiki_food?characterEncoding\=UTF-8
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
 hibernate.connection.useUnicode=true
 hibernate.connection.characterEncoding=utf8
 hibernate.connection.CharSet=utf8
