--- a/wikifood-manager/pom.xml
+++ b/wikifood-manager/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<spring.version>4.2.5.RELEASE</spring.version>
 		<hibernate.version>4.3.11.Final</hibernate.version>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
 	</properties>
 	<dependencies>
 		<dependency>
