--- a/wikifood-mobile/pom.xml
+++ b/wikifood-mobile/pom.xml
@@ -51,7 +51,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>wikifood</finalName>
+		<finalName>m.wikifood</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
