--- a/wikifood-manager/pom.xml
+++ b/wikifood-manager/pom.xml
@@ -55,17 +55,17 @@
 		<finalName>wikifood</finalName>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
-				<configuration>
-					<path>/${project.build.finalName}</path>
-					<update>true</update>
-					<url>http://localhost:8080/manager/text</url>
-					<username>tomcat</username>
-					<password>tomcatuser</password>
-				</configuration>
-			</plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>tomcat7</server>
+                    <path>/wikifood</path>
+                    <username>admin</username>
+                    <password>admin</password>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
