--- a/wikifood-service/pom.xml
+++ b/wikifood-service/pom.xml
@@ -31,11 +31,11 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>com.websystique.spring</groupId>
 			<artifactId>wikifood-dao</artifactId>
 			<version>1.0.0</version>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
@@ -46,5 +46,14 @@
 			<artifactId>wikifood-dao</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 	</dependencies>
+	<properties>
+          <maven.compiler.source>1.8</maven.compiler.source>
+          <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
