--- a/emerchant_admin/.classpath
+++ b/emerchant_admin/.classpath
@@ -18,5 +18,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="/wikifood-dao"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
