--- a/emerchant_admin/pom.xml
+++ b/emerchant_admin/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>org.eclipse.ui.forms</artifactId>
 			<version>3.6.200.v20150506-2029</version>
 		</dependency>
+		<!-- dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>${jersey2.version}</version>
+		</dependency-->
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
@@ -76,7 +81,11 @@
 			<artifactId>open-icon-library</artifactId>
 			<version>0.11</version>
 		</dependency>
-	
+		<dependency>
+			<groupId>org.jdatepicker</groupId>
+			<artifactId>jdatepicker</artifactId>
+			<version>1.3.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -91,4 +100,9 @@
 			</plugin>
 		</plugins>
 	</build>
+	<properties>
+		<jersey2.version>2.14</jersey2.version>
+		<jackson.version>2.3.2</jackson.version>
+		<jaxrs.version>2.0.1</jaxrs.version>
+	</properties>
 </project>
