--- a/wikifood-manager/pom.xml
+++ b/wikifood-manager/pom.xml
@@ -11,6 +11,8 @@
 		<spring.version>4.2.5.RELEASE</spring.version>
 		<hibernate.version>4.3.11.Final</hibernate.version>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
