--- a/wikifood-manager/pom.xml
+++ b/wikifood-manager/pom.xml
@@ -64,8 +64,8 @@
                     <url>http://localhost:8080/manager/text</url>
                     <server>tomcat7</server>
                     <path>/wikifood</path>
-                    <username>admin</username>
-                    <password>admin</password>
+                    <username>deployer</username>
+                    <password>deployer</password>
                 </configuration>
             </plugin>
 		</plugins>
